feat(apps/api): implement and test GetFuseLeveragedTokenSwapsBySymbol
