# apps/api/src/services/flts.ts
@@ -103,6 +103,48 @@ const queryFuseLeveragedTokenChartsBySymbol = gql`
     }
 `;
 
+const queryFuseLeveragedTokenSwapsBySymbol = gql`
+    query getFuseLeveragedTokenSwaps($symbol: String, $user: String) {
+        flts: flts(where: { symbol: $symbol }) {
+            swaps(first: 100, orderBy: timestamp, orderDirection: desc) {
+                ...swapInfo
+            }
+        }
+        user: flts(where: { symbol: $symbol }) {
+            swaps(
+                first: 100
+                orderBy: timestamp
+                orderDirection: desc
+                where: { user: $user }
+            ) {
+                ...swapInfo
+            }
+        }
+    }
+
+    fragment swapInfo on Swap {
+        timestamp
+        transaction {
+            id
+        }
+        amountIn
+        amountInUSD
+        amountOut
+        amountOutUSD
+        user {
+            id
+        }
+        tokenIn {
+            name
+            symbol
+        }
+        tokenOut {
+            name
+            symbol
+        }
+    }
+`;
+
 // prettier-ignore
 const BSC_GRAPH = "https://api.thegraph.com/subgraphs/name/risedle/risedle-flt-bsc";
 
@@ -225,6 +267,29 @@ interface FuseLeveragedTokenChart {
     fees: Array<FuseLeveragedTokenFee>;
 }
 
+interface FuseLeveragedTokenSwap {
+    hash: string;
+    user: string;
+    timestamp: number;
+    tokenIn: {
+        name: string;
+        symbol: string;
+    };
+    amountIn: number;
+    amountInUSD: number;
+    tokenOut: {
+        name: string;
+        symbol: string;
+    };
+    amountOut: number;
+    amountOutUSD: number;
+}
+
+interface FuseLeveragedTokenSwaps {
+    flt: Array<FuseLeveragedTokenSwap>;
+    user: Array<FuseLeveragedTokenSwap>;
+}
+
 /**
  * Get Fuse Leveraged Token historical prices, volumes and fees by symbol
  */
@@ -267,10 +332,60 @@ export async function getFuseLeveragedTokenChartsBySymbol(
     return { prices, volumes, fees };
 }
 
+/**
+ * Get Fuse Leveraged Token swaps activity
+ */
+export async function getFuseLeveragedTokenSwapsBySymbol(
+    chainId: ChainId,
+    fltSymbol: string,
+    userAddress: string | undefined
+): Promise<FuseLeveragedTokenSwaps | undefined> {
+    // Get data from the graph
+    const endpoint = getGraphEndpointByChainId(chainId);
+    const filter = fltSymbol.toUpperCase();
+    const data = await grequest(
+        endpoint,
+        queryFuseLeveragedTokenSwapsBySymbol,
+        {
+            symbol: filter,
+            user: userAddress,
+        }
+    );
+    if (data.flts.length == 0) return undefined;
+    const flt = data.flts[0].swaps.map((swap: any) => {
+        return {
+            timestamp: parseInt(swap.timestamp),
+            hash: swap.transaction.id,
+            user: swap.user.id,
+            tokenIn: swap.tokenIn,
+            amountIn: parseFloat(swap.amountIn),
+            amountInUSD: parseFloat(swap.amountInUSD),
+            tokenOut: swap.tokenOut,
+            amountOut: parseFloat(swap.amountOut),
+            amountOutUSD: parseFloat(swap.amountOutUSD),
+        };
+    });
+    const user = data.user[0].swaps.map((swap: any) => {
+        return {
+            timestamp: parseInt(swap.timestamp),
+            hash: swap.transaction.id,
+            user: swap.user.id,
+            tokenIn: swap.tokenIn,
+            amountIn: parseFloat(swap.amountIn),
+            amountInUSD: parseFloat(swap.amountInUSD),
+            tokenOut: swap.tokenOut,
+            amountOut: parseFloat(swap.amountOut),
+            amountOutUSD: parseFloat(swap.amountOutUSD),
+        };
+    });
+    return { flt, user };
+}
+
 const flts = {
     getFuseLeveragedTokensByChainId,
     getFuseLeveragedTokenBySymbol,
     getFuseLeveragedTokenChartsBySymbol,
+    getFuseLeveragedTokenSwapsBySymbol,
 };
 
 export default flts;
